Fixed a column misalignment issue

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -844,4 +844,6 @@ thead.selected+tbody>tr.empty {
     .data-title :first-child {
         margin-top: 20px;
     }
-    
+    .rangeTemplate {
+        display: none;
+    }
